--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@sanity/client": "^6.17.2",
+    "@sanity/client": "^6.19.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.41.1",
-    "antd": "^5.17.4",
     "@sanity/vision": "^3.43.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
-    "next-sanity": "^9.3.4",
+    "next-sanity": "^9.3.6",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.43.0",
     "styled-components": "^6.1.11",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -36,6 +35,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.1"
   }
 }
