--- a/sanity/package.json
+++ b/sanity/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/language-filter": "^4.0.2",
     "@sanity/vision": "^3.41.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
